--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
-title: Seventh Gen
+title: Seventh Gen.
 author: dillinsanity
 email: dgeorge7@asu.edu
 description: > # this means to ignore newlines until "baseurl:"
-  This is where the nativeness meets the Earth
+  This is where the nativeness meets the Earth. The ongoing journey of the nomad 
+  from the lands of the Cayuse, Umatilla, and Walla Walla people.
 # social links
 twitter_username: Not Applicable
 github_username: dillinsanity
